# ulti

./: .clang-format  .gitignore  LICENSE  README.md
ulti/: CMakeLists.txt
ulti/include/ulti/: card.hpp
ulti/src/: card.cpp  dealer.cpp  dealer.hpp
